# Low_DGE_ML

./: ML for radiation-tolerant materials dataset.xlsx  README.md  model.ipynb  pyproject.toml
src/low_dge/: __init__.py
